--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,14 @@ services:
     ports:
       - "3000:3000"
       - "9229:9229"
+    command: bash -c "npm run build && ./scripts/start.sh"
 
   postgres:
     image: postgres:11.2-alpine
+    ports:
+      - "5433:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+      - ./sql:/docker-entrypoint-initdb.d
     environment:
       POSTGRES_PASSWORD: postgres
