--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,10 @@ services:
   postgres:
     image: postgres:11.2-alpine
     ports:
-      - "5433:5432"
+      - "5432:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
       - ./sql:/docker-entrypoint-initdb.d
+    command: postgres -c listen_addresses='*'
     environment:
       POSTGRES_PASSWORD: postgres
